	* CORE: Added DataType.BOOLEAN_CHAR (to support '1' '0' or 't' 'f') and BOOLEAN_INTEGER.  Thanks to stew.
	* CORE: Fixed bug where dao.deleteById(...) was not being properly notified. Thanks to DanielJette. Bug #190.
	* CORE: Added support for QueryBuilder.countOf("DISTINCT(field)").  Thanks to spacetime.
	* JDBC: Possibly fixed some problems with the Oracle type with better boolean support.  Thanks to 51mon.
	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!
	* ANDROID: Moved Slf4jLoggingLog from JDBC to CORE so Android users can use it.  Thanks to tonyxiao.

4.48: 12/16/2013
	* CORE: Added support for tracking direct database connection activity with DatabaseConnectionProxy.
	* CORE: Fixed problem when inserting no columns to Sqlite (Android), other DBs. Thanks to Michael Weimann. Bug #155.
	* CORE: Added support for canceling of long running prepared queries. Thanks to Nathan Jones.
	* CORE: More aggressively remove of some ThreadLocal data.  Thanks to Pavel Arnošt.
	* CORE: Fixed problem with queries similar to and().not().like(...).  Thanks to ????.  Bug #159.
	* CORE: Added better use of object cache when hydrating foreign fields.  Thanks to Anthony Whitlock.  Feature #38.
	* ANDROID: Added initial API compatibility code for handling multiple API versions.  Needed to support canceling.

4.47: 9/8/2013
	* CORE: Added support to the QueryBuilder to support joinOr(...) and innerJoinOr().  Default is AND.
	* CORE: Added support to Dao for another type of queryRaw(...) method that maps results from Object[].
	* CORE: Renamed QueryBuilder and Where clear() to be reset() and deprecated the clear() methods.
	* CORE: Fixed problem where defaultValue = "" was being ignored.  Thanks to ManosProm.  Bug #152.